aura-modules/src/test/modules/invalidmodule/examples-duplicate-entries/examples-duplicate-entries.js
import { Element } from 'engine';

export default class DuplicateMetadata extends Element {}